--- a/dinner_surprise/love_birds.html
+++ b/dinner_surprise/love_birds.html
@@ -272,7 +272,7 @@
           <input class="digitInput" type="text" inputmode="none" readonly />
         </div>
         <div class="card" data-index="1">
-          <div class="label">Stars</div>
+          <div class="label">Flowers</div>
           <input class="digitInput" type="text" inputmode="none" readonly />
         </div>
         <div class="card" data-index="2">
@@ -312,7 +312,7 @@
   const RELAY_TIMEOUT_MS = 1000;
   const RELAY_MAX_ATTEMPTS = 3;
 
-  const ANSWERS = ["7","5","7","2"];
+  const ANSWERS = ["7","5","8","2"];
   const cards = [...document.querySelectorAll(".card")];
   const inputs = [...document.querySelectorAll(".digitInput")];
   const rows = ["r1","r2","r3","r4"].map(id => document.getElementById(id));
