--- a/dinner_surprise/chocolates.html
+++ b/dinner_surprise/chocolates.html
@@ -252,7 +252,7 @@
   <div class="panel">
     <div class="headerCard">
       <p class="title">Chocolates</p>
-      <p class="hint">A sweet little math challenge</p>
+      <p class="hint">A sweeet little math challenge</p>
     </div>
 
     <div class="equationWrap">
