--- a/dinner_surprise/congratulations.html
+++ b/dinner_surprise/congratulations.html
@@ -1,8 +1,8 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
 
   <style>
@@ -29,7 +29,7 @@
       color: var(--text);
       font-family: var(--font);
       user-select:none;
-      touch-action: manipulation;
+      touch-action: manipulation;`r`n      overscroll-behavior: none;
     }
 
     .app{
@@ -152,5 +152,29 @@
     </div>
   </div>
 </div>
+<script>
+(() => {
+  document.addEventListener("gesturestart", e => e.preventDefault(), { passive: false });
+  document.addEventListener("gesturechange", e => e.preventDefault(), { passive: false });
+  document.addEventListener("gestureend", e => e.preventDefault(), { passive: false });
+
+  let lastTouchEnd = 0;
+  document.addEventListener("touchend", e => {
+    const now = Date.now();
+    if(now - lastTouchEnd < 350){
+      e.preventDefault();
+    }
+    lastTouchEnd = now;
+  }, { passive: false });
+
+  document.addEventListener("touchmove", e => {
+    if(e.touches && e.touches.length > 1){
+      e.preventDefault();
+    }
+  }, { passive: false });
+})();
+</script>
 </body>
 </html>
+
+
