--- a/dinner_surprise/entree3.html
+++ b/dinner_surprise/entree3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
   <style>
     :root{
@@ -15,7 +15,7 @@
     }
     html, body{margin:0;padding:0;width:100%;height:100%;overflow:visible;
       background: radial-gradient(1200px 800px at 30% 20%, #162131 0%, var(--bg) 60%);
-      color:var(--text);font-family:var(--font);user-select:none;touch-action:manipulation;}
+      color:var(--text);font-family:var(--font);user-select:none;touch-action: manipulation;`r`n      overscroll-behavior: none;}
     .app{width:100%;height:100%;padding:18px;box-sizing:border-box;display:grid;grid-template-rows:84px 1fr;gap:14px;}
     .topbar{display:flex;align-items:center;justify-content:space-between;background:linear-gradient(180deg,#182433 0%,#121a24 100%);
       border:1px solid var(--border);border-radius:var(--radius);padding:14px 18px;box-shadow:var(--shadow);}
@@ -242,8 +242,32 @@
   document.addEventListener("dblclick", e => e.preventDefault());
 })();
 </script>
+<script>
+(() => {
+  document.addEventListener("gesturestart", e => e.preventDefault(), { passive: false });
+  document.addEventListener("gesturechange", e => e.preventDefault(), { passive: false });
+  document.addEventListener("gestureend", e => e.preventDefault(), { passive: false });
+
+  let lastTouchEnd = 0;
+  document.addEventListener("touchend", e => {
+    const now = Date.now();
+    if(now - lastTouchEnd < 350){
+      e.preventDefault();
+    }
+    lastTouchEnd = now;
+  }, { passive: false });
+
+  document.addEventListener("touchmove", e => {
+    if(e.touches && e.touches.length > 1){
+      e.preventDefault();
+    }
+  }, { passive: false });
+})();
+</script>
 </body>
 </html>
+
+
 
 
 
