--- a/dinner_surprise/points_of_view.html
+++ b/dinner_surprise/points_of_view.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Employee Access Terminal</title>
 
   <style>
@@ -29,7 +29,7 @@
       color: var(--text);
       font-family: var(--font);
       user-select:none;
-      touch-action: manipulation;
+      touch-action: manipulation;`r`n      overscroll-behavior: none;
     }
 
     .app{
@@ -141,7 +141,7 @@
       align-items:center;
       justify-content:center;
       cursor:pointer;
-      touch-action: manipulation;
+      touch-action: manipulation;`r`n      overscroll-behavior: none;
       position:relative;
       transition:.08s;
       border: 1px solid rgba(255,255,255,.08);
@@ -344,8 +344,32 @@
   document.addEventListener("dblclick", e => e.preventDefault());
 })();
 </script>
+<script>
+(() => {
+  document.addEventListener("gesturestart", e => e.preventDefault(), { passive: false });
+  document.addEventListener("gesturechange", e => e.preventDefault(), { passive: false });
+  document.addEventListener("gestureend", e => e.preventDefault(), { passive: false });
+
+  let lastTouchEnd = 0;
+  document.addEventListener("touchend", e => {
+    const now = Date.now();
+    if(now - lastTouchEnd < 350){
+      e.preventDefault();
+    }
+    lastTouchEnd = now;
+  }, { passive: false });
+
+  document.addEventListener("touchmove", e => {
+    if(e.touches && e.touches.length > 1){
+      e.preventDefault();
+    }
+  }, { passive: false });
+})();
+</script>
 </body>
 </html>
+
+
 
 
 
